--- a/config/config.env
+++ b/config/config.env
@@ -1,10 +1,10 @@
 PORT=8080
-TEXT_TO_SPEECH_IAM_APIKEY=<your text to speech apikey>
-TEXT_TO_SPEECH_URL=<your text to speech url>
-SPEECH_TO_TEXT_IAM_APIKEY=<your speech to text apikey>
-SPEECH_TO_TEXT_URL=<your speech to text url>
-ASSISTANT_APIKEY=<your assistant apikey>
+TEXT_TO_SPEECH_IAM_APIKEY=<96MlKElFUqc5Q5YIMpGb8GHag7H74GW9sMAEpM8Rg1bE>
+TEXT_TO_SPEECH_URL=<https://api.us-south.text-to-speech.watson.cloud.ibm.com/instances/a77dfb18-27dc-4afe-8901-b00b3f0c5c96>
+SPEECH_TO_TEXT_IAM_APIKEY=<h9AEWEf8HWkNpGTadBLCTRhZxUcdSiYU2EnCYDl3-3f7>
+SPEECH_TO_TEXT_URL=<https://api.us-south.speech-to-text.watson.cloud.ibm.com/instances/bc547fe4-443d-4be3-8566-55e67e3be76b>
+ASSISTANT_APIKEY=<aJPi8kraFZigynfAi_dFA9ZknNFK1fK70KKfniLc3X1F>
 ASSISTANT_IAM_APIKEY=<your assistant iam apikey>
-ASSISTANT_URL=<your assistan url>
+ASSISTANT_URL=<https://api.us-south.assistant.watson.cloud.ibm.com/instances/ae7a3bf4-cc6a-42a6-9327-aac0d5670345>
 ASSISTANT_AUTH_TYPE=iam
-workspaceId=<your workspace id>
+workspaceId=<109cb5cb-bbbe-4a15-876a-28fab614b775>
